--- a/rankdaty/package.json
+++ b/rankdaty/package.json
@@ -13,9 +13,13 @@
     "@emotion/styled": "^11.11.0",
     "@heroicons/react": "^2.0.18",
     "@mui/material": "^5.14.11",
+    "@radix-ui/react-alert-dialog": "^1.0.5",
+    "class-variance-authority": "^0.7.0",
     "next": "latest",
     "react": "latest",
-    "react-dom": "latest"
+    "react-dom": "latest",
+    "react-hot-toast": "^2.4.1",
+    "tailwind-merge": "^1.14.0"
   },
   "devDependencies": {
     "autoprefixer": "latest",
